tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__AssemblinginSpac-H_S9zi1_SUKG7JkEYgJIiA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3278419603209996424,
  "prerequisites": [
    3283,
    13520174359713356034
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This new Space Elevator module can be used to make lapotron orbs more easily, and to make the raw components for optical circuits.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Assembling in Space",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3283,
    13520174359713356034
  ],
  "rewards": [],
  "tasks": []
}
