tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__AwakenedCore-AAAAAAAAAAAAAAAAAAAB0w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 467,
  "prerequisites": [
    2675,
    3236,
    462
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There was something sleeping deep inside all the draconic material you have made and researched so far. It is time to AWAKE it!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Awakened Core",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2675,
    3236,
    462
  ],
  "rewards": [],
  "tasks": []
}
