tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__CheaperZPMCircui-dYvLkQ-xRnWL8Egy_MnoIg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1130762454012913698,
  "prerequisites": [
    2584
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Living bio chip can perform multiple tasks at once and will make your ZPM circuits cheaper!\n\n[note]This does cost quite a bit of hypogen, perhaps hold off on using these until you can make hypogen easily.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Cheaper ZPM Circuits",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2584
  ],
  "rewards": [],
  "tasks": []
}
