tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__DimensionalBreac-_TtL1y6-SfCCNKRrWSvrNQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3368210867956738869,
  "prerequisites": [
    3236,
    5955808233495542244,
    2588,
    2590
  ],
  "properties": {
    "auto_claim": false,
    "desc": "At last, you have done it. The DTPF is a mighty multiblock fueled by large amounts of power and catalyst. Running it constantly for 8 hours or longer reduces catalyst consumption by 50%, so you will want to find a way to automate this to save on expensive catalyst.\n\nYou will need 2112 coil blocks in total. Accepted coil tiers are\n\n- Awakened Draconium\n- Infinity\n- Hypogen\n- Eternal\n\nWhile you can start with Awakened Draconium coils, you will need at least infinity coils to make tesseracts for UIV, so it may be worth it to skip to those immediately\n\n[note]Perhaps it can be used to bake exotic cookies?[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Dimensional Breach Imminent",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3236,
    5955808233495542244,
    2588,
    2590
  ],
  "rewards": [],
  "tasks": []
}
