tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__DreamsofRainbowS-H3Tvy4ZKSyiQGT16Og90bA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 9676629385503798380,
  "prerequisites": [
    2613291457428301767
  ],
  "properties": {
    "auto_claim": false,
    "desc": "UEV energy hatches? Great! Time for stargate trophy number two.\nOnce again, to get your trophy you have to submit two stargates' worth of materials.\n\n§3Trophy number two brings us to chapter two of our journey through GTNHs past, the early UEV era.\n\nThe year 2022 has just begun and the UEV tier, albeit still quite empty, has become more useful than before. UEV-UMV energy hatches now have proper recipes (although with UEV parts) and optical SMDs are a thing now, hooray.\nThere finally are better powergen options than regular plasma turbine spam, namely naq fuel and compact fusions + XL plasma turbine spam. Technically dyson too, but that is horribly bugged and its 'legit' power output reasonably can't exceed around 6 billion EU/t (around the same as a compact MK4 running helium plasma).\nSome useful newly introduced multis are the PrAss, MCR & Mega Oil Cracker and overclocks past MAX voltage are possible on megas now.\nStargate has once again become a distant goal, as it now required exorbitant amounts or infinity catalyst and bio circuits, requiring to utilize the new tech to its fullest.\n\nTwo players, §aPhineasor§3 & §aGDCloud§3 were determined to be first to completing this goal, and after months of a close friendly race, the winner had been decided. §a\nGDCloud§3 won the race and conquered this round of nerfs on the §a27th of May, 2022§3.\n\nP.S.: Once again, if you want to be faithful to the challenge, try completing it without these additions:\n-PCB Factory, Space Elevator, Component Assemblyline, AAL, EEC, EIG, MABS\n-Any bee related GT machines\n-Any UEV or above multis (except weak dyson and naq refineries)\n-LEG\n-Sub 1-tick OC, Batch Mode, inbuilt Void Protection on multis\n-Level Maintainer, AE Fluid Crafting, Stocking Buses/Hatches, Crafting Input Buses, ME Output Hatches\n\nP.P.S.: Again the chaotic capacitor banks have been left out for the same reason as stated in the UV gate quest. Oh and the stargate parts used to be UXV recipes, but since UMV hatches are not craftable in UEV anymore, they have been downtiered to UIV to make them craftable in UEV.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Dreams of Rainbow... Stargates?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2613291457428301767
  ],
  "rewards": [],
  "tasks": []
}
