tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__Hypogen-AAAAAAAAAAAAAAAAAAAKGA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2584,
  "prerequisites": [
    3248
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Here it is, the most high tier GT++ material. You will need UIV to process it. Your Fluid Shaper will do that job just fine for you.\n\n[note]With your first ingot obtained, you can turn to the DTPF to make more. I think that recipe should be a lot better than the MK4 reactor.[/note]\n\n[note]You can also have this cake as a reward for coming this far.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Hypogen",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3248
  ],
  "rewards": [],
  "tasks": []
}
