tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier10UEV-D_aFb1hFQH2PDkN0_KvAEQ==__InfinityBoots-AzTPKiXuRWaBTOFhTeV83Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2733198329556335837,
  "prerequisites": [
    467
  ],
  "properties": {
    "auto_claim": false,
    "desc": "An armor set worthy of a God. These boots provide a permanent jump boost and increased running speed.\n\nWhile wearing the complete set, you are completely unkillable.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Infinity Boots",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    467
  ],
  "rewards": [],
  "tasks": []
}
